# synaps

./: LICENSE  README.md  pyproject.toml
DOC/: dev.md  device-event-schema.json
doc/: presence-mqtt-schema.json
examples/: mqtt.toml  sensors.toml  ws.toml
examples/config/: mqtt.toml  rpio.toml  sensors.toml  ws.toml
src/sensord/: __init__.py
src/sensord/cli/: __init__.py  __main__.py  client.py  sen0311.py  sen0395.py
src/sensord/common/: __init__.py  paths.py  sen0395.py  socket.py
src/sensord/service/: __init__.py  __main__.py  api.py  cfg.py  err.py  log.py  mqtt.py  paths.py  sen0311.py  sen0395.py  ws.py
src/synaps/: __init__.py
src/synaps/cli/: __init__.py  __main__.py  client.py  sen0311.py  sen0395.py
src/synaps/common/: __init__.py  paths.py  relay.py  sen0311.py  sen0395.py  socket.py  switch.py
src/synaps/service/: __init__.py  __main__.py  api.py  cfg.py  ksm.py  log.py  mqtt.py  rpio.py  sen0311.py  sen0395.py  ws.py
