[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sensord"
authors = [{name = "Stan Svec", email = "dev@stansvec.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.9"
dynamic = ["version", "description"]
dependencies = [
#    "sensation @ git+ssh://git@github.com/symbol-signal/sensation",
    "click>=8.1.7",
    "tomli>=2.0.1",
    "rich-click>=1.7.3",
    "pyserial>=3.5",
    "paho-mqtt>=1.6.1",
]

[tool.flit.module]
name = "sensord"

pythonpath = "src"

[project.scripts]
sensord = "sensord.service:main"
sensorctl = "sensord.cli:main"

[project.urls]
Home = "https://github.com/StanSvec/dfrobot-sen0395"
