[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "synaps"
authors = [{name = "Stan Svec", email = "dev@stansvec.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.11.2"
dynamic = ["version", "description"]
dependencies = [
    "sensation>=0.2.0",
    "click>=8.1.7",
    "rich-click>=1.7.3",
    "aiofiles>=24.1.0",
    "tomli>=2.0.1",
    "gmqtt>=0.6.16 ",
    "websockets>=12.0"
]

[tool.flit.module]
name = "synaps"

pythonpath = "src"

[project.scripts]
synapsd = "synaps.service:cli"
synaps = "synaps.cli:cli"

[project.urls]
Home = "https://github.com/symbol-signal/synaps"
